# labyrinth-game

./: .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml  justfile  rust-toolchain.toml
.config/: nextest.toml
.github/: renovate.json
.github/workflows/: benchmarks.yaml  build-binaries.yaml  ci.yaml  release.yaml  test-e2e.yaml  zizmor.yaml
crates/benchmarks/: Cargo.toml
crates/benchmarks/benches/: base64.rs  bfs_solver.rs  maze_parser.rs  sw_generator.rs
crates/benchmarks/inputs/: maze1.txt  maze2.txt  maze3.txt  maze4.txt  maze5.txt
crates/client/: Cargo.toml
crates/client/src/: MazeGraph { cell_map {Cell { row -1, c.yaml  client.rs  instructions.rs  lib.rs  main.rs  maze.rs  maze_parser.rs  maze_solver.rs  messages.rs  tui.rs
crates/client/src/data_structures/: maze_graph.rs  priority_queue.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs  server.rs
crates/shared/: Cargo.toml
crates/shared/src/: errors.rs  func.rs  lib.rs  logger.rs  main.rs  maze.rs  maze_generator.rs  messages.rs  radar.rs  to_binary.rs  utils.rs
e2e/: .dockerignore  Dockerfile  start.sh
src/: main.rs
