[package]
name = "labyrinth-game"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"

[profile.release]
# Configurations explicitly listed here for clarity.
# Using the best options for performance.
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols" # Set to `false` for debug information
debug = false     # Set to `true` for debug information
panic = "abort"   # Let it crash and force ourselves to write safe Rust

[profile.release-with-debug]
inherits = "release"
strip = false        # Keep debug information in binary
debug = true         # Include maximum amount of debug information

[profile.dev]
# Disabling debug info speeds up local and CI builds,
# and we don't rely on it for debugging that much.
debug = false

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
