[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
repository = "https://github.com/Jayllyz/labyrinth-game"
categories = ["maze", "game", "cli"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
clap = { version = "4.5.20", features = ["derive", "color"] }
criterion2 = { version = "2.0.0" }
rand = "0.8.5"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
get_unwrap = "warn"
clone_on_ref_ptr = "warn"

[profile.release]
# Configurations explicitly listed here for clarity.
# Using the best options for performance.
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols" # Set to `false` for debug information
debug = false     # Set to `true` for debug information
panic = "abort"   # Let it crash and force ourselves to write safe Rust
