[package]
name = "benchmarks"
version = "0.0.0"
repository.workspace = true
edition = "2021"

[lints]
workspace = true

[dependencies]
criterion2 = { workspace = true }
client = { path = "../client" }
shared = { path = "../shared" }

[[bench]]
name = "maze_parser"
harness = false

[[bench]]
name = "bfs_solver"
harness = false

[[bench]]
name = "sw_generator"
harness = false

[[bench]]
name = "base64"
harness = false
