[package]
name = "benchmarks"
version = "0.0.0"
repository.workspace = true
edition = "2024"

[lints]
workspace = true

[dependencies]
criterion2 = { version = "3.0.1" }
client = { path = "../client" }
shared = { path = "../shared" }

[[bench]]
name = "maze_parser"
harness = false

[[bench]]
name = "bfs_solver"
harness = false

[[bench]]
name = "sw_generator"
harness = false

[[bench]]
name = "base64"
harness = false
