[package]
name = "server"
version = "0.1.0"
include = ["/src"]
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
shared = { path = "../shared" }
clap = { workspace = true }
rand = { workspace = true }
